--- a/quiz-app/index.html
+++ b/quiz-app/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="app">
-    <h2>Welcome to Geology Quiz</h2>
+    <h2>Welcome to Geography Quiz</h2>
     <button onclick="location.href='student.html'">Login as Student</button>
     <button onclick="location.href='admin.html'">Login as Admin</button>
   </div>
