--- a/quiz-app/student.html
+++ b/quiz-app/student.html
@@ -36,7 +36,7 @@
     </div>
     
     <div id="quiz-section" style="display: none;">
-      <h2>Geology Quiz</h2>
+      <h2>Geography Quiz</h2>
       <div id="questionBox"></div>
       <div id="optionsBox"></div>
       <button onclick="nextQuestion()">Next</button>
